start work on the api
